--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "classnames": "^2.2.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
