--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
+    "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
