--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server:start": "cd ~/Workspaces/go/src/github.com/cljohnson4343/scavenge/ && make start",
-    "db:start": "cd ~/Workspaces/go/src/github.com/cljohnson4343/scavenge/ && make start-db"
+    "server:start": "cd $GOPATH/src/github.com/cljohnson4343/scavenge/ && make start",
+    "db:start": "cd $GOPATH/src/github.com/cljohnson4343/scavenge/ && make start-db"
   },
   "eslintConfig": {
     "extends": "react-app"
