--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.0.0-beta.2",
     "@material-ui/icons": "^3.0.2",
+    "@reach/router": "^1.2.1",
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "axios": "^0.18.0",
