--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-core": "^1.11.0",
+    "@devexpress/dx-grid-core": "^1.11.0",
+    "@devexpress/dx-react-core": "^1.11.0",
+    "@devexpress/dx-react-grid": "^1.11.0",
+    "@devexpress/dx-react-grid-material-ui": "^1.11.0",
     "@material-ui/core": "^4.0.0-beta.2",
     "@material-ui/icons": "^3.0.2",
     "@reach/router": "^1.2.1",
