--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,12 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Chrome",
+      "name": "Chrome attach",
       "type": "chrome",
       "request": "attach",
       "port": 9222,
       "url": "http://localhost:3000",
-      "webRoot": "${workspaceRoot}/src"
+      "webRoot": "${workspaceRoot}"
     },
     {
       "type": "node",
@@ -37,6 +37,14 @@
       "windows": {
         "program": "${workspaceFolder}/node_modules/jest/bin/jest"
       }
+    },
+    {
+      "name": "Chrome",
+      "type": "chrome",
+      "runtimeExecutable": "/usr/bin/google-chrome-stable",
+      "request": "launch",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceRoot}/src"
     }
   ]
 }
