--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.2.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "2.1.3",
     "underscore": "^1.9.1"
   },
