--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@turf/helpers": "^6.1.4",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "google-maps-react": "^2.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-google-maps": "^9.4.5",
     "react-scripts": "2.1.3",
     "underscore": "^1.9.1"
   },
