--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "underscore": "^1.9.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "REACT_APP_ENVIRONMENT=production react-scripts start",
+    "start-dev": "REACT_APP_ENVIRONMENT=development react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
