--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "REACT_APP_ENVIRONMENT=production react-scripts start",
     "start-dev": "REACT_APP_ENVIRONMENT=development react-scripts start",
-    "build": "react-scripts build",
+    "build": "REACT_APP_ENVIRONMENT=production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server:start": "cd $GOPATH/src/github.com/cljohnson4343/scavenge/ && make start",
